--- a/Leads/tsconfig.json
+++ b/Leads/tsconfig.json
@@ -21,42 +21,51 @@
     },
     "compileOnSave": false,
     "files": [
-        "./typings/tsd.d.ts",
-        "./client/app.config.ts",
-        "./client/app.module.ts",
-        "./client/components/bootstrap/control-label/control-label.directive.ts",
-        "./client/components/bootstrap/form-group/form-group.directive.ts",
-        "./client/components/bootstrap/navbar/navbar.directive.ts",
-        "./client/components/components.module.ts",
-        "./client/components/directives/address-type/address-type.directive.ts",
-        "./client/components/directives/address/address.directive.ts",
-        "./client/components/directives/clearfix/clearfix.directive.ts",
-        "./client/components/directives/customer/customer.directive.ts",
-        "./client/components/directives/interests/interests.directive.ts",
-        "./client/components/directives/sidebar/sidebar-state.service.ts",
-        "./client/components/directives/sidebar/sidebar.directive.ts",
-        "./client/components/filters/customer-to-string.filter.ts",
-        "./client/components/services/lead.service.ts",
-        "./client/components/services/leads.service.ts",
-        "./client/components/services/window-resize.service.ts",
-        "./client/models/address.ts",
-        "./client/models/customer.ts",
-        "./client/models/interest.ts",
-        "./client/models/lead.ts",
-        "./client/models/models.d.ts",
-        "./client/models/models.module.ts",
-        "./client/models/page.ts",
-        "./client/models/paged-filter-request.ts",
-        "./client/views/lead/create/lead-create.config.ts",
-        "./client/views/lead/create/lead-create.controller.ts",
-        "./client/views/lead/edit/lead-edit.config.ts",
-        "./client/views/lead/edit/lead-edit.controller.ts",
-        "./client/views/lead/lead.config.ts",
-        "./client/views/lead/lead.controller.ts",
-        "./client/views/leads/leads.config.ts",
-        "./client/views/leads/leads.controller.ts",
-        "./client/views/sandbox/sandbox.config.ts",
-        "./client/views/sandbox/sandbox.controller.ts",
-        "./client/views/views.module.ts"
+      "./typings/tsd.d.ts",
+      "./client/app.config.ts",
+      "./client/app.module.ts",
+      "./client/components/bootstrap/control-label/control-label.directive.ts",
+      "./client/components/bootstrap/form-group/form-group.directive.ts",
+      "./client/components/bootstrap/help-block/help-block.directive.ts",
+      "./client/components/components.module.ts",
+      "./client/components/directives/address-type/address-type.directive.ts",
+      "./client/components/directives/address/address.directive.ts",
+      "./client/components/directives/clearfix/clearfix.directive.ts",
+      "./client/components/directives/customer/customer.directive.ts",
+      "./client/components/directives/flex-container/flex-container.directive.ts",
+      "./client/components/directives/interests/interests.directive.ts",
+      "./client/components/directives/main-content/main-content.directive.ts",
+      "./client/components/directives/search-input/search-input.directive.ts",
+      "./client/components/directives/sidebar/sidebar-state.service.ts",
+      "./client/components/directives/sidebar/sidebar.directive.ts",
+      "./client/components/filters/customer-to-string.filter.ts",
+      "./client/components/services/lead.service.ts",
+      "./client/components/services/leads.service.ts",
+      "./client/components/services/window-resize.service.ts",
+      "./client/models/address.ts",
+      "./client/models/customer.ts",
+      "./client/models/interest.ts",
+      "./client/models/lead.ts",
+      "./client/models/models.d.ts",
+      "./client/models/models.module.ts",
+      "./client/models/page.ts",
+      "./client/models/paged-filter-request.ts",
+      "./client/views/lead/create/lead-create.config.ts",
+      "./client/views/lead/create/lead-create.controller.ts",
+      "./client/views/lead/edit/lead-edit.config.ts",
+      "./client/views/lead/edit/lead-edit.controller.ts",
+      "./client/views/lead/lead.config.ts",
+      "./client/views/lead/lead.controller.ts",
+      "./client/views/lead/lead.module.ts",
+      "./client/views/leads/directives/leads-sidebar/leads-sidebar.directive.ts",
+      "./client/views/leads/leads-view-leads.d.ts",
+      "./client/views/leads/leads.config.ts",
+      "./client/views/leads/leads.controller.ts",
+      "./client/views/leads/leads.module.ts",
+      "./client/views/sandbox/sandbox.config.ts",
+      "./client/views/sandbox/sandbox.controller.ts",
+      "./client/views/sandbox/sandbox.module.ts",
+      "./client/views/views.module.ts",
+      "client/views/lead/directives/lead-details/lead-details.directives.ts"
     ]
 }
