--- a/Leads/package.json
+++ b/Leads/package.json
@@ -41,7 +41,7 @@
       "vendor": {
         "src": {
           "_description": "additionalFiles: Include files not already include by main-bower-files",
-          "additionalFiles": [ ],
+          "additionalFiles": [],
           "js": {
             "outputFileName": "vendor.js"
           },
@@ -70,9 +70,8 @@
   ],
   "author": "aliengoo",
   "license": "ISC",
-  "dependencies": { },
+  "dependencies": {},
   "devDependencies": {
-    "lodash": "^3.10.1",
     "del": "^1.2.0",
     "gulp": "^3.9.0",
     "gulp-add-src": "^0.2.0",
@@ -82,6 +81,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-filter": "^2.0.2",
     "gulp-if": "^1.2.5",
+    "gulp-inject": "^3.0.0",
     "gulp-jade": "^1.0.1",
     "gulp-less": "^3.0.3",
     "gulp-livereload": "^3.8.0",
@@ -107,6 +107,7 @@
     "gulp-webserver": "^0.9.1",
     "ip": "^1.0.1",
     "lazypipe": "^1.0.1",
+    "lodash": "^3.10.1",
     "main-bower-files": "^2.8.2",
     "node-notifier": "^4.2.3",
     "node-sass": "^3.3.2",
