--- a/Leads/package.json
+++ b/Leads/package.json
@@ -12,6 +12,7 @@
         "root": ".temp"
       },
       "src": {
+        "root": "client",
         "_description": "src: roots of your source code",
         "js": {
           "root": "client",
@@ -79,6 +80,7 @@
     "gulp-autoprefixer": "^2.3.1",
     "gulp-changed": "^1.3.0",
     "gulp-concat": "^2.6.0",
+    "gulp-debug": "^2.1.0",
     "gulp-filter": "^2.0.2",
     "gulp-if": "^1.2.5",
     "gulp-inject": "^3.0.0",
