--- a/Leads/package.json
+++ b/Leads/package.json
@@ -117,7 +117,7 @@
     "requirejs": "^2.1.20",
     "rewire": "^2.3.4",
     "run-sequence": "^1.1.2",
-    "tslint": "^2.6.0-dev.2",
+    "tslint": "^2.5.1",
     "yargs": "^3.15.0"
   }
 }
